# hnlp_proj

./: .gitignore  README.md  eda.ipynb  eda.py  eval.py  pyproject.toml  running.py  setup.cfg  stanza_process.ipynb  stanza_process.py
data/victorian_large/: Austen_Pride.txt  Fielding_Tom.txt  Sterne_Sentimental.txt
hnlp_proj/: delta.py  evaluation.py  loader.py  plot_utils.py  processing.py  utils.py
scrape/scrape/: settings.py
scrape/scrape/spiders/: ynet.py
tests/: test_delta.py  test_hnlp_proj.py
