[tool.poetry]
name = "hnlp_proj"
version = "0.1.0"
description = ""
authors = ["Daniel Kerbel <nmdanny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.5.0"
numpy = "^1.20.2"
pandas = "^1.2.4"
stanza = "^1.2"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
ipykernel = "^5.5.4"
mypy = "^0.812"
flake8 = "^3.9.1"
isort = "^5.8.0"
black = "^21.5b0"
rope = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
